<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contato"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.kenzo.atmempresaconsultoria.ContatoActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_contato"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView6"
        android:background="@drawable/detalhe_contato" />

    <TextView
        android:text="@string/contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:layout_marginStart="66dp"
        android:layout_marginBottom="40dp"
        android:id="@+id/textView9"
        android:textSize="@dimen/large_text"/>

    <TextView
        android:text="@string/celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignEnd="@+id/textView11"
        android:layout_marginTop="17dp"
        android:id="@+id/textView12" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:layout_below="@+id/imageView6"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginEnd="18dp" />

    <TextView
        android:text="@string/telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />
</RelativeLayout>
