<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.kenzo.atmempresaconsultoria.ClienteActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/detalhe_cliente"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView3"
        android:background="@drawable/detalhe_cliente" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente1"
        android:layout_marginTop="27dp"
        android:id="@+id/imageView4"
        android:background="@drawable/cliente1"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cliente2"
        android:id="@+id/imageView5"
        android:layout_below="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4"
        android:layout_marginTop="63dp"
        android:background="@drawable/cliente2" />

    <TextView
        android:text="@string/empresa_auditoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="25dp"
        android:id="@+id/textView7" />

    <TextView
        android:text="@string/nossos_clientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4"
        android:layout_marginBottom="29dp"
        android:id="@+id/textView8"
        android:textSize="@dimen/large_text"/>

    <TextView
        android:text="@string/empresa_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
